[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "csv_column_download"
description = "Download the URLs specified in a CSV column"
authors = [
  {name = "David Faden", email = "dfaden@gmail.com"},
]
version = "1.1.0"
license = {text = "MIT License"}
dependencies = ["requests"]